--- a/projectenigma/.godot/editor/editor_layout.cfg
+++ b/projectenigma/.godot/editor/editor_layout.cfg
@@ -17,7 +17,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://thing.png")
+dock_filesystem_selected_paths=PackedStringArray("res://platform.png")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -26,10 +26,10 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://game.tscn", "res://player.tscn")
-current_scene="res://player.tscn"
+current_scene="res://game.tscn"
 center_split_offset=0
-selected_default_debugger_tab_idx=1
-selected_main_editor_idx=2
+selected_default_debugger_tab_idx=0
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
