--- a/projectenigma/.godot/editor/editor_layout.cfg
+++ b/projectenigma/.godot/editor/editor_layout.cfg
@@ -17,27 +17,26 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://platform.png")
+dock_filesystem_selected_paths=PackedStringArray("res://grapple.png")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_3="Scene,Import"
 dock_4="FileSystem"
-dock_5="Inspector,Node,History"
+dock_5="Inspector,Node,History,Commit (30)"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://game.tscn", "res://player.tscn")
-current_scene="res://game.tscn"
-center_split_offset=0
-selected_default_debugger_tab_idx=0
+open_scenes=PackedStringArray("res://game.tscn", "res://player.tscn", "res://grapple_node.tscn")
+current_scene="res://grapple_node.tscn"
+center_split_offset=-244
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=0
-selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://player.gd"]
 selected_script="res://player.gd"
 open_help=[]
-script_split_offset=70
+script_split_offset=150
 list_split_offset=0
 zoom_factor=1.0
 
@@ -47,3 +46,13 @@ open_shaders=[]
 split_offset=0
 selected_shader=""
 text_shader_zoom_factor=1.0
+
+[editor_log]
+
+log_filter_0=true
+log_filter_2=true
+log_filter_1=true
+log_filter_3=true
+log_filter_4=true
+collapse=false
+show_search=true
