--- a/projectenigma/.godot/global_script_class_cache.cfg
+++ b/projectenigma/.godot/global_script_class_cache.cfg
@@ -1,1 +1,43 @@
-list=Array[Dictionary]([])
+list=Array[Dictionary]([{
+"base": &"State",
+"class": &"PlayerDash",
+"icon": "",
+"language": &"GDScript",
+"path": "res://PlayerDash.gd"
+}, {
+"base": &"State",
+"class": &"PlayerFalling",
+"icon": "",
+"language": &"GDScript",
+"path": "res://PlayerFalling.gd"
+}, {
+"base": &"State",
+"class": &"PlayerGrapple",
+"icon": "",
+"language": &"GDScript",
+"path": "res://PlayerGrapple.gd"
+}, {
+"base": &"State",
+"class": &"PlayerIdle",
+"icon": "",
+"language": &"GDScript",
+"path": "res://PlayerIdle.gd"
+}, {
+"base": &"State",
+"class": &"PlayerJump",
+"icon": "",
+"language": &"GDScript",
+"path": "res://PlayerJump.gd"
+}, {
+"base": &"State",
+"class": &"PlayerRunning",
+"icon": "",
+"language": &"GDScript",
+"path": "res://PlayerRunning.gd"
+}, {
+"base": &"Node",
+"class": &"State",
+"icon": "",
+"language": &"GDScript",
+"path": "res://State.gd"
+}])
