--- a/projectenigma/.godot/editor/editor_layout.cfg
+++ b/projectenigma/.godot/editor/editor_layout.cfg
@@ -9,33 +9,34 @@ dock_closed=[]
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=270
-dock_hsplit_3=-270
+dock_hsplit_2=330
+dock_hsplit_3=-309
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://grapple.png")
+dock_filesystem_selected_paths=PackedStringArray("res://PlayerJump.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_3="Scene,Import"
 dock_4="FileSystem"
-dock_5="Inspector,Node,History,Commit (30)"
+dock_5="Inspector,Node,History,Commit (43)"
 
 [EditorNode]
 
 open_scenes=PackedStringArray("res://game.tscn", "res://player.tscn", "res://grapple_node.tscn")
-current_scene="res://grapple_node.tscn"
-center_split_offset=-244
-selected_default_debugger_tab_idx=1
-selected_main_editor_idx=0
+current_scene="res://player.tscn"
+center_split_offset=-252
+selected_default_debugger_tab_idx=5
+selected_main_editor_idx=2
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://player.gd"]
-selected_script="res://player.gd"
-open_help=[]
+open_scripts=["res://player.gd", "res://PlayerDash.gd", "res://PlayerFalling.gd", "res://PlayerGrapple.gd", "res://PlayerIdle.gd", "res://PlayerJump.gd", "res://PlayerRunning.gd", "res://State.gd", "res://state_machine.gd"]
+selected_script="res://PlayerRunning.gd"
+open_help=["@GlobalScope", "CharacterBody2D", "Node2D", "RayCast2D", "Vector2"]
 script_split_offset=150
 list_split_offset=0
 zoom_factor=1.0
@@ -54,5 +55,5 @@ log_filter_2=true
 log_filter_1=true
 log_filter_3=true
 log_filter_4=true
-collapse=false
+collapse=true
 show_search=true
