--- a/projectenigma/.godot/editor/editor_layout.cfg
+++ b/projectenigma/.godot/editor/editor_layout.cfg
@@ -21,7 +21,7 @@ dock_filesystem_selected_paths=PackedStringArray("res://PlayerJump.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_3="Scene,Import"
 dock_4="FileSystem"
-dock_5="Inspector,Node,History,Commit (43)"
+dock_5="Inspector,Node,History,Commit (26)"
 
 [EditorNode]
 
@@ -35,7 +35,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://player.gd", "res://PlayerDash.gd", "res://PlayerFalling.gd", "res://PlayerGrapple.gd", "res://PlayerIdle.gd", "res://PlayerJump.gd", "res://PlayerRunning.gd", "res://State.gd", "res://state_machine.gd"]
-selected_script="res://PlayerRunning.gd"
+selected_script="res://player.gd"
 open_help=["@GlobalScope", "CharacterBody2D", "Node2D", "RayCast2D", "Vector2"]
 script_split_offset=150
 list_split_offset=0
