player movement improvements

--- a/projectenigma/.godot/global_script_class_cache.cfg
+++ b/projectenigma/.godot/global_script_class_cache.cfg
@@ -35,6 +35,12 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://PlayerRunning.gd"
 }, {
+"base": &"State",
+"class": &"PlayerSlide",
+"icon": "",
+"language": &"GDScript",
+"path": "res://PlayerSlide.gd"
+}, {
 "base": &"Node",
 "class": &"State",
 "icon": "",
