--- a/projectenigma/.godot/editor/editor_layout.cfg
+++ b/projectenigma/.godot/editor/editor_layout.cfg
@@ -17,25 +17,25 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://PlayerJump.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
+dock_filesystem_selected_paths=PackedStringArray("res://Sprites/Miriam_Ol_Reliable.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Sprites/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
-dock_5="Inspector,Node,History,Commit (30)"
+dock_5="Inspector,Node,History,Commit (51)"
 
 [EditorNode]
 
 open_scenes=PackedStringArray("res://game.tscn", "res://player.tscn", "res://grapple_node.tscn")
 current_scene="res://player.tscn"
 center_split_offset=-252
-selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_default_debugger_tab_idx=1
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://player.gd", "res://PlayerDash.gd", "res://PlayerFalling.gd", "res://PlayerGrapple.gd", "res://PlayerIdle.gd", "res://PlayerJump.gd", "res://PlayerRunning.gd", "res://PlayerSlide.gd", "res://State.gd", "res://state_machine.gd"]
-selected_script="res://PlayerGrapple.gd"
+open_scripts=["res://player.gd", "res://PlayerDash.gd", "res://PlayerFalling.gd", "res://PlayerGrapple.gd", "res://PlayerIdle.gd", "res://PlayerJump.gd", "res://PlayerRunning.gd", "res://PlayerSlide.gd", "res://sprite_state_machine.gd", "res://State.gd", "res://state_machine.gd"]
+selected_script="res://player.gd"
 open_help=["@GlobalScope", "CharacterBody2D", "CollisionShape2D", "Input", "Node2D", "RayCast2D", "Vector2"]
 script_split_offset=247
 list_split_offset=0
