--- a/projectenigma/.godot/editor/script_editor_cache.cfg
+++ b/projectenigma/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 38,
+"column": 88,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 17,
-"scroll_position": 33.0,
+"row": 76,
+"scroll_position": 56.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -21,7 +21,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 9,
-"scroll_position": 0.0,
+"scroll_position": 27.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -59,11 +59,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 9,
+"column": 10,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 36,
-"scroll_position": 0.0,
+"row": 7,
+"scroll_position": 7.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -73,11 +73,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 2,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 36,
-"row": 29,
-"scroll_position": 15.0,
+"h_scroll_position": 0,
+"row": 7,
+"scroll_position": 7.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -87,11 +87,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 45,
+"column": 41,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 25,
-"scroll_position": 0.0,
+"row": 4,
+"scroll_position": 4.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -117,9 +117,9 @@ state={
 "breakpoints": PackedInt32Array(),
 "column": 25,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
+"h_scroll_position": 121,
 "row": 72,
-"scroll_position": 50.0,
+"scroll_position": 42.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -134,6 +134,20 @@ state={
 "h_scroll_position": 0,
 "row": 23,
 "scroll_position": 4.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://sprite_state_machine.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 1,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 8,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
