more movement fixes

--- a/projectenigma/.godot/global_script_class_cache.cfg
+++ b/projectenigma/.godot/global_script_class_cache.cfg
@@ -3,47 +3,59 @@ list=Array[Dictionary]([{
 "class": &"PlayerDash",
 "icon": "",
 "language": &"GDScript",
-"path": "res://PlayerDash.gd"
+"path": "res://Player/PlayerDash.gd"
 }, {
 "base": &"State",
 "class": &"PlayerFalling",
 "icon": "",
 "language": &"GDScript",
-"path": "res://PlayerFalling.gd"
+"path": "res://Player/PlayerFalling.gd"
 }, {
 "base": &"State",
 "class": &"PlayerGrapple",
 "icon": "",
 "language": &"GDScript",
-"path": "res://PlayerGrapple.gd"
+"path": "res://Player/PlayerGrapple.gd"
 }, {
 "base": &"State",
 "class": &"PlayerIdle",
 "icon": "",
 "language": &"GDScript",
-"path": "res://PlayerIdle.gd"
+"path": "res://Player/PlayerIdle.gd"
 }, {
 "base": &"State",
 "class": &"PlayerJump",
 "icon": "",
 "language": &"GDScript",
-"path": "res://PlayerJump.gd"
+"path": "res://Player/PlayerJump.gd"
 }, {
 "base": &"State",
 "class": &"PlayerRunning",
 "icon": "",
 "language": &"GDScript",
-"path": "res://PlayerRunning.gd"
+"path": "res://Player/PlayerRunning.gd"
 }, {
 "base": &"State",
 "class": &"PlayerSlide",
 "icon": "",
 "language": &"GDScript",
-"path": "res://PlayerSlide.gd"
+"path": "res://Player/PlayerSlide.gd"
+}, {
+"base": &"State",
+"class": &"PlayerWallJump",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Player/PlayerWalljump.gd"
+}, {
+"base": &"State",
+"class": &"PlayerWallSlide",
+"icon": "",
+"language": &"GDScript",
+"path": "res://PlayerWallSlide.gd"
 }, {
 "base": &"Node",
 "class": &"State",
 "icon": "",
 "language": &"GDScript",
-"path": "res://State.gd"
+"path": "res://Player/State.gd"
 }])
