--- a/projectenigma/.godot/editor/editor_layout.cfg
+++ b/projectenigma/.godot/editor/editor_layout.cfg
@@ -17,11 +17,11 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://PlayerJump.gd")
+dock_filesystem_selected_paths=PackedStringArray("res://PlayerWallSlide.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_3="Scene,Import"
 dock_4="FileSystem"
-dock_5="Inspector,Node,History,Commit (30)"
+dock_5="Inspector,Node,History,Commit (41)"
 
 [EditorNode]
 
@@ -34,10 +34,10 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://player.gd", "res://PlayerDash.gd", "res://PlayerFalling.gd", "res://PlayerGrapple.gd", "res://PlayerIdle.gd", "res://PlayerJump.gd", "res://PlayerRunning.gd", "res://PlayerSlide.gd", "res://State.gd", "res://state_machine.gd"]
-selected_script="res://PlayerGrapple.gd"
+open_scripts=["res://Player/player.gd", "res://Player/PlayerDash.gd", "res://Player/PlayerFalling.gd", "res://Player/PlayerGrapple.gd", "res://Player/PlayerIdle.gd", "res://Player/PlayerJump.gd", "res://Player/PlayerRunning.gd", "res://Player/PlayerSlide.gd", "res://Player/PlayerWalljump.gd", "res://PlayerWallSlide.gd", "res://Player/State.gd", "res://Player/state_machine.gd"]
+selected_script="res://Player/PlayerWalljump.gd"
 open_help=["@GlobalScope", "CharacterBody2D", "CollisionShape2D", "Input", "Node2D", "RayCast2D", "Vector2"]
-script_split_offset=247
+script_split_offset=150
 list_split_offset=0
 zoom_factor=1.0
 
