--- a/projectenigma/.godot/editor/script_editor_cache.cfg
+++ b/projectenigma/.godot/editor/script_editor_cache.cfg
@@ -1,23 +1,23 @@
-[res://player.gd]
+[res://Player/player.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 38,
+"column": 39,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 17,
-"scroll_position": 33.0,
+"row": 19,
+"scroll_position": 3.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
 
-[res://state_machine.gd]
+[res://Player/PlayerDash.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 22,
+"column": 12,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 9,
@@ -26,7 +26,105 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://State.gd]
+[res://Player/PlayerFalling.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 2,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 25,
+"scroll_position": 12.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Player/PlayerGrapple.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 24,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 33,
+"scroll_position": 24.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Player/PlayerIdle.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 6,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 19,
+"scroll_position": 1.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Player/PlayerJump.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 14,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 11,
+"scroll_position": 14.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Player/PlayerRunning.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 2,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 17,
+"scroll_position": 6.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Player/PlayerSlide.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 35,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 23,
+"scroll_position": 4.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Player/PlayerWalljump.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 84,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 13,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Player/State.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -40,7 +138,7 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://PlayerIdle.gd]
+[res://Player/state_machine.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -48,92 +146,22 @@ state={
 "column": 22,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 20,
-"scroll_position": 10.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://PlayerJump.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 9,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 36,
+"row": 9,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
 
-[res://PlayerFalling.gd]
+[res://PlayerWallSlide.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 36,
-"row": 29,
-"scroll_position": 15.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://PlayerDash.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 45,
+"column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 25,
+"row": 22,
 "scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://PlayerRunning.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 3,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 17,
-"scroll_position": 5.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://PlayerGrapple.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 25,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 72,
-"scroll_position": 50.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://PlayerSlide.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 35,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 23,
-"scroll_position": 4.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
