--- a/projectenigma/.godot/global_script_class_cache.cfg
+++ b/projectenigma/.godot/global_script_class_cache.cfg
@@ -18,6 +18,12 @@ list=Array[Dictionary]([{
 "path": "res://Player/PlayerGrapple.gd"
 }, {
 "base": &"State",
+"class": &"PlayerGrapplePull",
+"icon": "",
+"language": &"GDScript",
+"path": "res://PlayerGrapplePull.gd"
+}, {
+"base": &"State",
 "class": &"PlayerIdle",
 "icon": "",
 "language": &"GDScript",
