Revert "test level"

--- a/projectenigma/.godot/global_script_class_cache.cfg
+++ b/projectenigma/.godot/global_script_class_cache.cfg
@@ -1,53 +1,5 @@
 list=Array[Dictionary]([{
 "base": &"State",
-"class": &"PlayerDash",
-"icon": "",
-"language": &"GDScript",
-"path": "res://Player/PlayerDash.gd"
-}, {
-"base": &"State",
-"class": &"PlayerFalling",
-"icon": "",
-"language": &"GDScript",
-"path": "res://Player/PlayerFalling.gd"
-}, {
-"base": &"State",
-"class": &"PlayerGrapple",
-"icon": "",
-"language": &"GDScript",
-"path": "res://Player/PlayerGrapple.gd"
-}, {
-"base": &"State",
-"class": &"PlayerGrapplePull",
-"icon": "",
-"language": &"GDScript",
-"path": "res://PlayerGrapplePull.gd"
-}, {
-"base": &"State",
-"class": &"PlayerIdle",
-"icon": "",
-"language": &"GDScript",
-"path": "res://Player/PlayerIdle.gd"
-}, {
-"base": &"State",
-"class": &"PlayerJump",
-"icon": "",
-"language": &"GDScript",
-"path": "res://Player/PlayerJump.gd"
-}, {
-"base": &"State",
-"class": &"PlayerRunning",
-"icon": "",
-"language": &"GDScript",
-"path": "res://Player/PlayerRunning.gd"
-}, {
-"base": &"State",
-"class": &"PlayerSlide",
-"icon": "",
-"language": &"GDScript",
-"path": "res://Player/PlayerSlide.gd"
-}, {
-"base": &"State",
 "class": &"PlayerWallJump",
 "icon": "",
 "language": &"GDScript",
@@ -57,11 +9,11 @@ list=Array[Dictionary]([{
 "class": &"PlayerWallSlide",
 "icon": "",
 "language": &"GDScript",
-"path": "res://PlayerWallSlide.gd"
+"path": "res://Player/PlayerWallSlide.gd"
 }, {
 "base": &"Node",
 "class": &"State",
 "icon": "",
 "language": &"GDScript",
-"path": "res://Player/State.gd"
+"path": "res://State.gd"
 }])
