--- a/projectenigma/.godot/global_script_class_cache.cfg
+++ b/projectenigma/.godot/global_script_class_cache.cfg
@@ -1,11 +1,5 @@
 list=Array[Dictionary]([{
 "base": &"State",
-"class": &"PlayerDash",
-"icon": "",
-"language": &"GDScript",
-"path": "res://Player/PlayerDash.gd"
-}, {
-"base": &"State",
 "class": &"PlayerFalling",
 "icon": "",
 "language": &"GDScript",
@@ -21,7 +15,7 @@ list=Array[Dictionary]([{
 "class": &"PlayerGrapplePull",
 "icon": "",
 "language": &"GDScript",
-"path": "res://PlayerGrapplePull.gd"
+"path": "res://Player/PlayerGrapplePull.gd"
 }, {
 "base": &"State",
 "class": &"PlayerIdle",
@@ -57,7 +51,7 @@ list=Array[Dictionary]([{
 "class": &"PlayerWallSlide",
 "icon": "",
 "language": &"GDScript",
-"path": "res://PlayerWallSlide.gd"
+"path": "res://Player/PlayerWallSlide.gd"
 }, {
 "base": &"Node",
 "class": &"State",
