--- a/projectenigma/.godot/editor/editor_layout.cfg
+++ b/projectenigma/.godot/editor/editor_layout.cfg
@@ -17,25 +17,25 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Terrain (32x32).png")
+dock_filesystem_selected_paths=PackedStringArray("res://game.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_3="Scene,Import"
 dock_4="FileSystem"
-dock_5="Inspector,Node,History,Commit (30)"
+dock_5="Inspector,Node,History,Commit (32)"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://game.tscn", "res://player.tscn", "res://grapple_node.tscn")
-current_scene="res://game.tscn"
-center_split_offset=-651
+open_scenes=PackedStringArray("res://grapple_node.tscn", "res://player.tscn", "res://game.tscn")
+current_scene="res://player.tscn"
+center_split_offset=-313
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Player/player.gd", "res://Player/PlayerDash.gd", "res://Player/PlayerFalling.gd", "res://Player/PlayerGrapple.gd", "res://PlayerGrapplePull.gd", "res://Player/PlayerIdle.gd", "res://Player/PlayerJump.gd", "res://Player/PlayerRunning.gd", "res://Player/PlayerSlide.gd", "res://Player/PlayerWalljump.gd", "res://PlayerWallSlide.gd", "res://Player/State.gd", "res://Player/state_machine.gd"]
-selected_script="res://Player/player.gd"
+open_scripts=["res://Player/player.gd", "res://Player/PlayerFalling.gd", "res://Player/PlayerGrapple.gd", "res://Player/PlayerIdle.gd", "res://Player/PlayerJump.gd", "res://Player/PlayerRunning.gd", "res://Player/PlayerSlide.gd", "res://Player/PlayerWalljump.gd", "res://Player/State.gd", "res://Player/state_machine.gd"]
+selected_script="res://Player/PlayerFalling.gd"
 open_help=["@GlobalScope", "CharacterBody2D", "CollisionShape2D", "Input", "Node2D", "RayCast2D", "Vector2"]
 script_split_offset=150
 list_split_offset=0
