--- a/projectenigma/.godot/editor/editor_layout.cfg
+++ b/projectenigma/.godot/editor/editor_layout.cfg
@@ -21,21 +21,21 @@ dock_filesystem_selected_paths=PackedStringArray("res://game.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_3="Scene,Import"
 dock_4="FileSystem"
-dock_5="Inspector,Node,History,Commit (32)"
+dock_5="Inspector,Node,History,Commit (8)"
 
 [EditorNode]
 
 open_scenes=PackedStringArray("res://grapple_node.tscn", "res://player.tscn", "res://game.tscn")
-current_scene="res://player.tscn"
+current_scene="res://game.tscn"
 center_split_offset=-313
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://Player/player.gd", "res://Player/PlayerFalling.gd", "res://Player/PlayerGrapple.gd", "res://Player/PlayerIdle.gd", "res://Player/PlayerJump.gd", "res://Player/PlayerRunning.gd", "res://Player/PlayerSlide.gd", "res://Player/PlayerWalljump.gd", "res://Player/State.gd", "res://Player/state_machine.gd"]
-selected_script="res://Player/PlayerFalling.gd"
+selected_script="res://Player/player.gd"
 open_help=["@GlobalScope", "CharacterBody2D", "CollisionShape2D", "Input", "Node2D", "RayCast2D", "Vector2"]
 script_split_offset=150
 list_split_offset=0
