fix momentum bug

--- a/projectenigma/.godot/global_script_class_cache.cfg
+++ b/projectenigma/.godot/global_script_class_cache.cfg
@@ -1,5 +1,11 @@
 list=Array[Dictionary]([{
 "base": &"State",
+"class": &"PlayerDash",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Player/PlayerDash.gd"
+}, {
+"base": &"State",
 "class": &"PlayerFalling",
 "icon": "",
 "language": &"GDScript",
