grapple icons added
and fixed some sprites

--- a/projectenigma/.godot/global_script_class_cache.cfg
+++ b/projectenigma/.godot/global_script_class_cache.cfg
@@ -1,67 +1,85 @@
 list=Array[Dictionary]([{
+"base": &"RefCounted",
+"class": &"Attack",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Attack.gd"
+}, {
+"base": &"Node",
+"class": &"HealthComponent",
+"icon": "",
+"language": &"GDScript",
+"path": "res://HealthComponent.gd"
+}, {
+"base": &"Area2D",
+"class": &"HitboxComponent",
+"icon": "",
+"language": &"GDScript",
+"path": "res://HitboxComponent.gd"
+}, {
 "base": &"State",
 "class": &"PlayerDash",
 "icon": "",
 "language": &"GDScript",
-"path": "res://Player/PlayerDash.gd"
+"path": "res://Player/Scripts/PlayerDash.gd"
 }, {
 "base": &"State",
 "class": &"PlayerFalling",
 "icon": "",
 "language": &"GDScript",
-"path": "res://Player/PlayerFalling.gd"
+"path": "res://Player/Scripts/PlayerFalling.gd"
 }, {
 "base": &"State",
 "class": &"PlayerGrapple",
 "icon": "",
 "language": &"GDScript",
-"path": "res://Player/PlayerGrapple.gd"
+"path": "res://Player/Scripts/PlayerGrapple.gd"
 }, {
 "base": &"State",
 "class": &"PlayerGrapplePull",
 "icon": "",
 "language": &"GDScript",
-"path": "res://Player/PlayerGrapplePull.gd"
+"path": "res://Player/Scripts/PlayerGrapplePull.gd"
 }, {
 "base": &"State",
 "class": &"PlayerIdle",
 "icon": "",
 "language": &"GDScript",
-"path": "res://Player/PlayerIdle.gd"
+"path": "res://Player/Scripts/PlayerIdle.gd"
 }, {
 "base": &"State",
 "class": &"PlayerJump",
 "icon": "",
 "language": &"GDScript",
-"path": "res://Player/PlayerJump.gd"
+"path": "res://Player/Scripts/PlayerJump.gd"
 }, {
 "base": &"State",
 "class": &"PlayerRunning",
 "icon": "",
 "language": &"GDScript",
-"path": "res://Player/PlayerRunning.gd"
+"path": "res://Player/Scripts/PlayerRunning.gd"
 }, {
 "base": &"State",
 "class": &"PlayerSlide",
 "icon": "",
 "language": &"GDScript",
-"path": "res://Player/PlayerSlide.gd"
+"path": "res://Player/Scripts/PlayerSlide.gd"
 }, {
 "base": &"State",
 "class": &"PlayerWallJump",
 "icon": "",
 "language": &"GDScript",
-"path": "res://Player/PlayerWalljump.gd"
+"path": "res://Player/Scripts/PlayerWalljump.gd"
 }, {
 "base": &"State",
 "class": &"PlayerWallSlide",
 "icon": "",
 "language": &"GDScript",
-"path": "res://Player/PlayerWallSlide.gd"
+"path": "res://Player/Scripts/PlayerWallSlide.gd"
 }, {
 "base": &"Node",
 "class": &"State",
 "icon": "",
 "language": &"GDScript",
-"path": "res://Player/State.gd"
+"path": "res://Player/Scripts/State.gd"
 }])
