--- a/projectenigma/.godot/editor/script_editor_cache.cfg
+++ b/projectenigma/.godot/editor/script_editor_cache.cfg
@@ -1,46 +1,64 @@
-[res://Player/player.gd]
+[res://Player/Scripts/player.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 18,
+"column": 16,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 7,
+"row": 58,
+"scroll_position": 48.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Player/Scripts/PlayerDash.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 22,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 9,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
 
-[res://Player/PlayerFalling.gd]
+[res://Player/Scripts/PlayerFalling.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 26,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 41,
-"scroll_position": 23.0,
-"selection": false,
+"row": 22,
+"scroll_position": 12.0,
+"selection": true,
+"selection_from_column": 25,
+"selection_from_line": 22,
+"selection_to_column": 26,
+"selection_to_line": 22,
 "syntax_highlighter": "GDScript"
 }
 
-[res://Player/PlayerGrapple.gd]
+[res://Player/Scripts/PlayerGrapple.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 33,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 15,
-"scroll_position": 4.0,
+"row": 23,
+"scroll_position": 17.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
 
-[res://Player/PlayerIdle.gd]
+[res://Player/Scripts/PlayerIdle.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -49,12 +67,12 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 19,
-"scroll_position": 1.0,
+"scroll_position": 9.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
 
-[res://Player/PlayerJump.gd]
+[res://Player/Scripts/PlayerJump.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -62,13 +80,17 @@ state={
 "column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 23,
-"scroll_position": 9.475,
-"selection": false,
+"row": 24,
+"scroll_position": 12.0,
+"selection": true,
+"selection_from_column": 1,
+"selection_from_line": 24,
+"selection_to_column": 42,
+"selection_to_line": 25,
 "syntax_highlighter": "GDScript"
 }
 
-[res://Player/PlayerRunning.gd]
+[res://Player/Scripts/PlayerRunning.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -76,13 +98,13 @@ state={
 "column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 17,
-"scroll_position": 6.0,
+"row": 25,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
 
-[res://Player/PlayerSlide.gd]
+[res://Player/Scripts/PlayerSlide.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -91,12 +113,12 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 23,
-"scroll_position": 4.0,
+"scroll_position": 2.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
 
-[res://Player/PlayerWalljump.gd]
+[res://Player/Scripts/PlayerWalljump.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -114,12 +136,40 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://Player/State.gd]
+[res://Player/Scripts/state_machine.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 19,
+"column": 2,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 48,
+"scroll_position": 24.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://HealthComponent.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 26,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 1,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Attack.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 28,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 4,
@@ -128,29 +178,29 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://Player/state_machine.gd]
+[res://HitboxComponent.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 22,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 9,
+"row": 8,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
 
-[res://Player/PlayerDash.gd]
+[res://Player/Scripts/sprite_state_machine.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 22,
+"column": 109,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 9,
+"h_scroll_position": 337,
+"row": 12,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
