fix movement again again

--- a/projectenigma/.godot/editor/editor_layout.cfg
+++ b/projectenigma/.godot/editor/editor_layout.cfg
@@ -21,7 +21,7 @@ dock_filesystem_selected_paths=PackedStringArray("res://Player/Sprites/Grapple_P
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Player/", "res://Player/Sprites/", "res://Player/Scripts/", "res://Components/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
-dock_5="Inspector,Node,History,Commit (105)"
+dock_5="Inspector,Node,History,Commit (12)"
 
 [EditorNode]
 
@@ -34,10 +34,10 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Attack.gd", "res://HealthComponent.gd", "res://HitboxComponent.gd", "res://Player/Scripts/player.gd", "res://Player/Scripts/PlayerDash.gd", "res://Player/Scripts/PlayerFalling.gd", "res://Player/Scripts/PlayerGrapple.gd", "res://Player/Scripts/PlayerIdle.gd", "res://Player/Scripts/PlayerJump.gd", "res://Player/Scripts/PlayerRunning.gd", "res://Player/Scripts/PlayerSlide.gd", "res://Player/Scripts/PlayerWalljump.gd", "res://Player/Scripts/sprite_state_machine.gd", "res://Player/Scripts/state_machine.gd"]
+open_scripts=["res://Attack.gd", "res://HealthComponent.gd", "res://HitboxComponent.gd", "res://Player/Scripts/player.gd", "res://Player/Scripts/PlayerDash.gd", "res://Player/Scripts/PlayerFalling.gd", "res://Player/Scripts/PlayerGrapple.gd", "res://Player/Scripts/PlayerGrapplePull.gd", "res://Player/Scripts/PlayerIdle.gd", "res://Player/Scripts/PlayerJump.gd", "res://Player/Scripts/PlayerRunning.gd", "res://Player/Scripts/PlayerSlide.gd", "res://Player/Scripts/PlayerWalljump.gd", "res://Player/Scripts/sprite_state_machine.gd", "res://Player/Scripts/state_machine.gd"]
 selected_script="res://Player/Scripts/player.gd"
 open_help=["@GlobalScope", "CharacterBody2D", "CollisionShape2D", "Input", "Node2D", "RayCast2D", "Vector2"]
-script_split_offset=150
+script_split_offset=260
 list_split_offset=0
 zoom_factor=1.0
 
