--- a/projectenigma/.godot/editor/script_editor_cache.cfg
+++ b/projectenigma/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 16,
+"column": 3,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 58,
-"scroll_position": 48.0,
+"row": 79,
+"scroll_position": 62.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -31,16 +31,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 26,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 22,
-"scroll_position": 12.0,
-"selection": true,
-"selection_from_column": 25,
-"selection_from_line": 22,
-"selection_to_column": 26,
-"selection_to_line": 22,
+"row": 34,
+"scroll_position": 19.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -49,11 +45,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 33,
+"column": 48,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 23,
-"scroll_position": 17.0,
+"row": 46,
+"scroll_position": 30.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -77,14 +73,14 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 24,
+"row": 25,
 "scroll_position": 12.0,
 "selection": true,
-"selection_from_column": 1,
-"selection_from_line": 24,
+"selection_from_column": 2,
+"selection_from_line": 25,
 "selection_to_column": 42,
 "selection_to_line": 25,
 "syntax_highlighter": "GDScript"
@@ -123,16 +119,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 28,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 42,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 0,
-"selection_to_column": 0,
-"selection_to_line": 42,
+"row": 25,
+"scroll_position": 17.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -197,11 +189,25 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 109,
+"column": 18,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 337,
-"row": 12,
-"scroll_position": 0.0,
+"h_scroll_position": 0,
+"row": 11,
+"scroll_position": 16.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Player/Scripts/PlayerGrapplePull.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 47,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 13,
+"scroll_position": 3.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
