Basic Dialog Thing

--- a/projectenigma/.godot/editor/editor_layout.cfg
+++ b/projectenigma/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_closed=[]
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=445
+dock_hsplit_2=278
 dock_hsplit_3=-373
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=240
@@ -17,27 +17,27 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Player/Sprites/Grapple_Point_Dot.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Player/", "res://Player/Sprites/", "res://Player/Scripts/", "res://Components/")
+dock_filesystem_selected_paths=PackedStringArray("res://Player/Scripts/state_machine.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://World Objects/", "res://Singletons/", "res://Player/", "res://Player/Sprites/", "res://Player/Scripts/", "res://addons/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
-dock_5="Inspector,Node,History,Commit (12)"
+dock_5="Inspector,Node,History,Commit (63)"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://grapple_node.tscn", "res://Player/player.tscn", "res://Game Scenes/testlevel.tscn", "res://Components/health_component.tscn", "res://Components/hitbox_component.tscn")
-current_scene="res://Player/player.tscn"
-center_split_offset=-313
+open_scenes=PackedStringArray("res://Game Scenes/player.tscn", "res://Game Scenes/testlevel.tscn", "res://Components/dialog_player.tscn", "res://Components/hitbox_component.tscn")
+current_scene="res://Components/dialog_player.tscn"
+center_split_offset=-312
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=["res://Attack.gd", "res://HealthComponent.gd", "res://HitboxComponent.gd", "res://Player/Scripts/player.gd", "res://Player/Scripts/PlayerDash.gd", "res://Player/Scripts/PlayerFalling.gd", "res://Player/Scripts/PlayerGrapple.gd", "res://Player/Scripts/PlayerGrapplePull.gd", "res://Player/Scripts/PlayerIdle.gd", "res://Player/Scripts/PlayerJump.gd", "res://Player/Scripts/PlayerRunning.gd", "res://Player/Scripts/PlayerSlide.gd", "res://Player/Scripts/PlayerWalljump.gd", "res://Player/Scripts/sprite_state_machine.gd", "res://Player/Scripts/state_machine.gd"]
-selected_script="res://Player/Scripts/player.gd"
-open_help=["@GlobalScope", "CharacterBody2D", "CollisionShape2D", "Input", "Node2D", "RayCast2D", "Vector2"]
-script_split_offset=260
+open_scripts=["res://Components/Attack.gd", "res://Components/DialogArea.gd", "res://Components/DialogPlayer.gd", "res://Components/HealthComponent.gd", "res://HitboxComponent.gd", "res://Player/Scripts/player.gd", "res://Player/Scripts/PlayerDash.gd", "res://Player/Scripts/PlayerFalling.gd", "res://Player/Scripts/PlayerGrapple.gd", "res://Player/Scripts/PlayerGrapplePull.gd", "res://Player/Scripts/PlayerIdle.gd", "res://Player/Scripts/PlayerJump.gd", "res://Player/Scripts/PlayerRunning.gd", "res://Player/Scripts/PlayerSlide.gd", "res://Player/Scripts/PlayerWalljump.gd", "res://Singletons/SignalBus.gd", "res://Player/Scripts/sprite_state_machine.gd", "res://Player/Scripts/State.gd", "res://Player/Scripts/state_machine.gd"]
+selected_script="res://Components/DialogArea.gd"
+open_help=["@GlobalScope", "Array", "CharacterBody2D", "CollisionShape2D", "Input", "JSON", "Node", "Node2D", "Object", "RayCast2D", "Vector2"]
+script_split_offset=150
 list_split_offset=0
 zoom_factor=1.0
 
