--- a/projectenigma/.godot/global_script_class_cache.cfg
+++ b/projectenigma/.godot/global_script_class_cache.cfg
@@ -3,13 +3,13 @@ list=Array[Dictionary]([{
 "class": &"Attack",
 "icon": "",
 "language": &"GDScript",
-"path": "res://Attack.gd"
+"path": "res://Components/Attack.gd"
 }, {
 "base": &"Node",
 "class": &"HealthComponent",
 "icon": "",
 "language": &"GDScript",
-"path": "res://HealthComponent.gd"
+"path": "res://Components/HealthComponent.gd"
 }, {
 "base": &"Area2D",
 "class": &"HitboxComponent",
