--- a/projectenigma/.godot/editor/script_editor_cache.cfg
+++ b/projectenigma/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 3,
+"column": 21,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 79,
-"scroll_position": 62.0,
+"row": 63,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -49,7 +49,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 46,
-"scroll_position": 30.0,
+"scroll_position": 62.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -59,11 +59,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 6,
+"column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 19,
-"scroll_position": 9.0,
+"row": 30,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -73,16 +73,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 2,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 25,
-"scroll_position": 12.0,
-"selection": true,
-"selection_from_column": 2,
-"selection_from_line": 25,
-"selection_to_column": 42,
-"selection_to_line": 25,
+"row": 26,
+"scroll_position": 16.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -137,35 +133,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 48,
-"scroll_position": 24.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://HealthComponent.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 26,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 1,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Attack.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 28,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 4,
-"scroll_position": 0.0,
+"scroll_position": 23.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -207,7 +175,91 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 13,
-"scroll_position": 3.0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Singletons/SignalBus.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 4,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Components/Attack.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 28,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 4,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Components/HealthComponent.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 26,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 1,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Components/DialogArea.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 35,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 11,
+"scroll_position": 1.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Components/DialogPlayer.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 50,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 26,
+"scroll_position": 4.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Player/Scripts/State.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 1,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 4,
+"scroll_position": 7.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
