added health, working on hitboxes

--- a/projectenigma/.godot/global_script_class_cache.cfg
+++ b/projectenigma/.godot/global_script_class_cache.cfg
@@ -15,7 +15,25 @@ list=Array[Dictionary]([{
 "class": &"HitboxComponent",
 "icon": "",
 "language": &"GDScript",
-"path": "res://HitboxComponent.gd"
+"path": "res://Components/HitboxComponent.gd"
+}, {
+"base": &"Area2D",
+"class": &"HurtboxComponent",
+"icon": "",
+"language": &"GDScript",
+"path": "res://HurtboxComponent.gd"
+}, {
+"base": &"State",
+"class": &"PlayerActionAttack",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Player/PlayerActionAttack.gd"
+}, {
+"base": &"State",
+"class": &"PlayerActionIdle",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Player/PlayerActionIdle.gd"
 }, {
 "base": &"State",
 "class": &"PlayerDash",
