sliding for real

--- a/projectenigma/.godot/editor/editor_layout.cfg
+++ b/projectenigma/.godot/editor/editor_layout.cfg
@@ -17,15 +17,15 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Components/grapple_node.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Player/Sprites/", "res://Player/Scripts/", "res://Game Scenes/", "res://Components/", "res://addons/")
+dock_filesystem_selected_paths=PackedStringArray("res://UI/Money_Counter_Numbers.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://UI/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
-dock_5="Inspector,Node,History,Commit (16)"
+dock_5="Inspector,Node,History,Commit (43)"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Game Scenes/player.tscn", "res://Game Scenes/testlevel.tscn", "res://World Objects/sign.tscn", "res://UI/StaticCamera.tscn", "res://Components/grapple_node.tscn")
+open_scenes=PackedStringArray("res://Game Scenes/player.tscn", "res://Game Scenes/testlevel.tscn", "res://UI/StaticCamera.tscn", "res://Player/playercamera.tscn", "res://UI/MoneyCounter.tscn")
 current_scene="res://Game Scenes/testlevel.tscn"
 center_split_offset=-313
 selected_default_debugger_tab_idx=1
@@ -34,7 +34,7 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Components/Attack.gd", "res://Components/DialogArea.gd", "res://Components/DialogPlayer.gd", "res://Components/HealthComponent.gd", "res://HitboxComponent.gd", "res://UI/PauseMenu.gd", "res://Player/Scripts/player.gd", "res://Player/Scripts/PlayerDash.gd", "res://Player/Scripts/PlayerFalling.gd", "res://Player/Scripts/PlayerGrapple.gd", "res://Player/Scripts/PlayerGrapplePull.gd", "res://Player/Scripts/PlayerIdle.gd", "res://Player/Scripts/PlayerJump.gd", "res://Player/Scripts/PlayerRunning.gd", "res://Player/Scripts/PlayerSlide.gd", "res://Player/Scripts/PlayerWalljump.gd", "res://Singletons/SignalBus.gd", "res://Player/Scripts/sprite_state_machine.gd", "res://Player/Scripts/State.gd", "res://Player/Scripts/state_machine.gd"]
+open_scripts=["res://Components/Attack.gd", "res://Components/DialogArea.gd", "res://Components/DialogPlayer.gd", "res://Components/HealthComponent.gd", "res://HitboxComponent.gd", "res://UI/money_counter.gd", "res://UI/PauseMenu.gd", "res://Player/Scripts/player.gd", "res://Player/Scripts/PlayerDash.gd", "res://Player/Scripts/PlayerFalling.gd", "res://Player/Scripts/PlayerGrapple.gd", "res://Player/Scripts/PlayerGrapplePull.gd", "res://Player/Scripts/PlayerIdle.gd", "res://Player/Scripts/PlayerJump.gd", "res://Player/Scripts/PlayerRunning.gd", "res://Player/Scripts/PlayerSlide.gd", "res://Singletons/PlayerVariables.gd", "res://Player/Scripts/PlayerWalljump.gd", "res://Singletons/SignalBus.gd", "res://Player/Scripts/sprite_state_machine.gd", "res://Player/Scripts/State.gd", "res://Player/Scripts/state_machine.gd"]
 selected_script="res://Player/Scripts/PlayerSlide.gd"
 open_help=["@GlobalScope", "Array", "CharacterBody2D", "CollisionShape2D", "Input", "JSON", "Node", "Node2D", "Object", "RayCast2D", "Vector2"]
 script_split_offset=247
